[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_naive_lib"
version = "0.2"
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "colorlog",
  "psutil",
  "filelock",
  "requests",
  "tqdm",
  "dill",
  "looseversion",
  "gevent"
]

[tool.setuptools.package-data]
cyy_naive_lib = ["py.typed"]

[project.urls]
Repository = "https://github.com/cyyever/naive_python_lib"

[tool.ruff]
target-version = "py312"
src = ["cyy_naive_lib","test"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
