[project]
name = "cyy_naive_lib"
version = "0.3"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "BSD License" }
authors = [
  { name = "cyy", email = "cyyever@outlook.com" },
]
classifiers = ["Programming Language :: Python"]
dependencies = [
  "colorlog",
  "dill",
  "filelock",
  "gevent",
  "looseversion",
  "numpy",
  "psutil",
  "pytest",
  "pytest_cov",
  "requests",
  "tqdm"
]

[project.urls]
Repository = "https://github.com/cyyever/naive_python_lib"

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
src = ["cyy_naive_lib", "test"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # Pylint
  "PL",
  "PIE",
  "RUF",
  "ANN"
]
ignore = ["PLR2004", "PLR0912", "E501"]

[tool.setuptools.package-data]
cyy_naive_lib = ["py.typed"]
