[project]
name = "cyy_naive_lib"
version = "0.3"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "BSD License" }
authors = [
  { name = "cyy", email = "cyyever@outlook.com" },
]
classifiers = ["Programming Language :: Python"]
dependencies = [
  "colorlog",
  "dill",
  "filelock",
  "looseversion",
  "psutil",
  "pytest",
  "pytest_cov",
  "tqdm",
  "wget"
]

[project.optional-dependencies]
full = ["numpy", "gevent"] 

[project.urls]
Repository = "https://github.com/cyyever/naive_python_lib"

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
src = ["cyy_naive_lib", "test"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # Pylint
  "PL",
  "PIE",
  "RUF",
  "PTH",
  "ANN"
]
ignore = ["PLR2004", "PLR0912", "E501", "ANN401", "PLR0911","ANN003","ANN002","ANN401"]

[tool.setuptools.package-data]
cyy_naive_lib = ["py.typed"]
